--- a/index.html
+++ b/index.html
@@ -5,17 +5,119 @@
 <head>
   <meta charset="utf-8">
   <title>Ken-Te-Vi (Chama teu vulgo Azulão)</title>
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  
+  
+
+  <link rel="stylesheet" href="./assets/css/reset.css">
 </head>
 <!-- Corpo -->
 
 <body>
-  <header>
-    <!-- Imagem Logo -->
-    <figure>
-      <img src="/assets/img/bird 1.svg" alt="">
-      <figcaption>Logo Ken-Te-Vi</figcaption>
-    </figure>
-  </header>
+  <div class="container">
+    <!-- Cabecalho -->
+    <header class="cabecalho">
+      <!-- Imagem Logo -->
+      <figure class="cabecalho_logo">
+        <img src="./assets/img/bird 1.svg" alt="Logo">
+        <figcaption hidden>Logo Ken-Te-Vi</figcaption>
+      </figure>
+      <!-- Menu de Navegação -->
+      <nav class="menuNavegacao">
+        <!-- Lista de Link or Itens -->
+        <ul class="menuLista">
+          <li class="menuItem">
+            <img src="./assets/img/Home.png" alt="">
+            <a href="./index.html">Página Inicial</a>
+          </li>
+          <li class="menuItem">
+            <img src="./assets/img/Hashtag.png" alt="">
+            <a href="./index.html">Explorar</a>
+          </li>
+          <li class="menuItem">
+            <img src="./assets/img/Notification.png" alt="">
+            <a href="./index.html">Notificações</a>
+          </li>
+          <li class="menuItem">
+            <img src="./assets/img/Group.png" alt="">
+            <a href="./index.html">Mensagens</a>
+          </li>
+          <li class="menuItem">
+            <img src="./assets/img/Group (1).png" alt="">
+            <a href="./index.html">Itens Salvos</a>
+          </li>
+          <li class="menuItem">
+            <img src="./assets/img/Group (2).png " alt="">
+            <a href="./index.html">Listas</a>
+          </li>
+          <li class="menuItem">
+            <img src="./assets/img/ProfilePic2.jpg" alt="">
+            <a href="./index.html">Perfil</a>
+          </li>
+          <li class="menuItem">
+            <img src="./assets/img/Group (3).png" alt="">
+            <a href="./index.html">Mais</a>
+          </li>
+
+
+        </ul>
+      </nav>
+    </header>
+    <!-- COnteudo Principal -->
+    <main class="principal">
+      <h3 class="titulo">Home</h3>
+
+      <form class="form" action="#">
+        <textarea class="textoTweet" name="textoTweet" placeholder="O que está acontecendo?"></textarea>
+        <button type="submit">Tweetar</button>
+      </form>
+
+      <!-- Feed de Noticias -->
+      <section class="feed">
+        <ul class="listaTweets">
+          <!-- Noticias -->
+          <li class="tweet">
+            <img class="fotoPerfil" src="./assets/img/ProfilePic.png" alt="foto">
+            <div class="conteudo">
+              <h2>Lapalui</h2>
+              <span>@lapalui 1s</span>
+              <p>texto testao sdfasdf asdf asdf asdf asdf Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Voluptatum, magnam veniam. Nobis, accusantium ad. Illum hic totam, exercitationem vero adipisci iusto
+                quam
+                quo reiciendis cupiditate! Iure perferendis quas eius est?</p>
+            </div>
+          </li> <!-- Noticias -->
+          <li class="tweet">
+            <img class="fotoPerfil" src="./assets/img/ProfilePic.png" alt="foto">
+            <div class="conteudo">
+              <h2>Lapalui</h2>
+              <span>@lapalui 1s</span>
+              <p>texto testao sdfasdf asdf asdf asdf asdf Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Voluptatum, magnam veniam. Nobis, accusantium ad. Illum hic totam, exercitationem vero adipisci iusto
+                quam
+                quo reiciendis cupiditate! Iure perferendis quas eius est?</p>
+            </div>
+          </li> <!-- Noticias -->
+          <li class="tweet">
+            <img class="fotoPerfil" src="./assets/img/ProfilePic.png" alt="foto">
+            <div class="conteudo">
+              <h2>Lapalui</h2>
+              <span>@lapalui 1s</span>
+              <p>texto testao sdfasdf asdf asdf asdf asdf Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Voluptatum, magnam veniam. Nobis, accusantium ad. Illum hic totam, exercitationem vero adipisci iusto
+                quam
+                quo reiciendis cupiditate! Iure perferendis quas eius est?</p>
+            </div>
+          </li>
+
+        </ul>
+      </section>
+    </main>
+
+  </div>
 </body>
 
 </html>
