Finalizado ate a live com ajustes

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <a href="./index.html">Listas</a>
           </li>
           <li class="menuItem">
-            <img src="./assets/img/ProfilePic2.jpg" alt="">
+            <img class="pic" src="./assets/img/ProfilePic2.jpg" alt="">
             <a href="./index.html">Perfil</a>
           </li>
           <li class="menuItem">
@@ -71,7 +71,7 @@
       <h3 class="titulo">Home</h3>
 
       <form class="form" action="#">
-        <textarea class="textoTweet" name="textoTweet" placeholder="O que está acontecendo?"></textarea>
+        <textarea class="textoTweet" id="text" name="textoTweet" placeholder="O que está acontecendo?"></textarea>
         <button type="submit">Tweetar</button>
       </form>
 
@@ -90,6 +90,17 @@
                 quo reiciendis cupiditate! Iure perferendis quas eius est?</p>
             </div>
           </li> <!-- Noticias -->
+          <!-- <li class="tweet">
+            <img class="fotoPerfil" src="./assets/img/ProfilePic.png" alt="foto">
+            <div class="conteudo">
+              <h2>Lapalui</h2>
+              <span>@lapalui 1s</span>
+              <p>texto testao sdfasdf asdf asdf asdf asdf Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Voluptatum, magnam veniam. Nobis, accusantium ad. Illum hic totam, exercitationem vero adipisci iusto
+                quam
+                quo reiciendis cupiditate! Iure perferendis quas eius est?</p>
+            </div>
+          </li> --> <!-- Noticias --><!-- 
           <li class="tweet">
             <img class="fotoPerfil" src="./assets/img/ProfilePic.png" alt="foto">
             <div class="conteudo">
@@ -100,24 +111,15 @@
                 quam
                 quo reiciendis cupiditate! Iure perferendis quas eius est?</p>
             </div>
-          </li> <!-- Noticias -->
-          <li class="tweet">
-            <img class="fotoPerfil" src="./assets/img/ProfilePic.png" alt="foto">
-            <div class="conteudo">
-              <h2>Lapalui</h2>
-              <span>@lapalui 1s</span>
-              <p>texto testao sdfasdf asdf asdf asdf asdf Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Voluptatum, magnam veniam. Nobis, accusantium ad. Illum hic totam, exercitationem vero adipisci iusto
-                quam
-                quo reiciendis cupiditate! Iure perferendis quas eius est?</p>
-            </div>
-          </li>
+          </li> -->
 
         </ul>
       </section>
     </main>
 
   </div>
+
+  <script src="./assets/js/script.js" type="text/javascript"></script>
 </body>
 
 </html>
